# cassette-input

./: CMakeLists.txt  README.md  changelog.md  factory_presets.json  validation.md
.github/scripts/: build_win.ps1
.github/workflows/: release.yml
Resources/: presets.json  theme.json
Source/: CreatePluginFilter.cpp  EQ.cpp  EQ.h  HeadBumpEQ.cpp  HeadBumpEQ.h  Metering.cpp  Metering.h  Noise.h  Oversampling.cpp  Oversampling.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preamp.cpp  Preamp.h  TapeComp.cpp  TapeComp.h  UI.h  WowFlutter.cpp  WowFlutter.h
Tests/: CMakeLists.txt  GoldenHarness.cpp  TestProcessor.cpp
scripts/: build_mac.sh
